fixup links, fixup loading icon alignment for verifier, remove extraneous files

--- a/src/submission/edits/Verifier.css
+++ b/src/submission/edits/Verifier.css
@@ -22,10 +22,11 @@
 
 .Verifier .LoadingIconWrapper {
   position: absolute;
+  left: 150px;
 }
 .Verifier .LoadingIcon {
-  left: -38px;
-  top: 27px;
+  left: 0;
+  top: 14px;
 }
 
 .Verifier li {
